{
  "version": 4,
  "terraform_version": "1.15.4",
  "serial": 30,
  "lineage": "835a259d-3242-73fa-59e9-bd728b0c5c8e",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/6aa4adf4-4021-4201-9071-7c5d6502ee03/resourceGroups/devops-rg/providers/Microsoft.Network/networkInterfaces/devops-nic",
            "internal_domain_name_suffix": "2cy5qo1eaphuvoz5vh1iobb1ed.tx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6aa4adf4-4021-4201-9071-7c5d6502ee03/resourceGroups/devops-rg/providers/Microsoft.Network/publicIPAddresses/devops-pip",
                "subnet_id": "/subscriptions/6aa4adf4-4021-4201-9071-7c5d6502ee03/resourceGroups/devops-rg/providers/Microsoft.Network/virtualNetworks/devops-vnet/subnets/devops-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "southindia",
            "name": "devops-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "devops-rg"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "devops-nic",
            "resource_group_name": "devops-rg",
            "subscription_id": "6aa4adf4-4021-4201-9071-7c5d6502ee03"
          },
          "dependencies": [
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6aa4adf4-4021-4201-9071-7c5d6502ee03/resourceGroups/devops-rg/providers/Microsoft.Network/networkInterfaces/devops-nic|/subscriptions/6aa4adf4-4021-4201-9071-7c5d6502ee03/resourceGroups/devops-rg/providers/Microsoft.Network/networkSecurityGroups/devops-nsg",
            "network_interface_id": "/subscriptions/6aa4adf4-4021-4201-9071-7c5d6502ee03/resourceGroups/devops-rg/providers/Microsoft.Network/networkInterfaces/devops-nic",
            "network_security_group_id": "/subscriptions/6aa4adf4-4021-4201-9071-7c5d6502ee03/resourceGroups/devops-rg/providers/Microsoft.Network/networkSecurityGroups/devops-nsg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.nic",
            "azurerm_network_security_group.nsg",
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6aa4adf4-4021-4201-9071-7c5d6502ee03/resourceGroups/devops-rg/providers/Microsoft.Network/networkSecurityGroups/devops-nsg",
            "location": "southindia",
            "name": "devops-nsg",
            "resource_group_name": "devops-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3000",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-grafana",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "9090",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-prometheus",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "devops-nsg",
            "resource_group_name": "devops-rg",
            "subscription_id": "6aa4adf4-4021-4201-9071-7c5d6502ee03"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "grafana",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3000",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/6aa4adf4-4021-4201-9071-7c5d6502ee03/resourceGroups/devops-rg/providers/Microsoft.Network/networkSecurityGroups/devops-nsg/securityRules/allow-grafana",
            "name": "allow-grafana",
            "network_security_group_name": "devops-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "devops-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "allow-grafana",
            "network_security_group_name": "devops-nsg",
            "resource_group_name": "devops-rg",
            "subscription_id": "6aa4adf4-4021-4201-9071-7c5d6502ee03"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "9090",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/6aa4adf4-4021-4201-9071-7c5d6502ee03/resourceGroups/devops-rg/providers/Microsoft.Network/networkSecurityGroups/devops-nsg/securityRules/allow-prometheus",
            "name": "allow-prometheus",
            "network_security_group_name": "devops-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "devops-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "allow-prometheus",
            "network_security_group_name": "devops-nsg",
            "resource_group_name": "devops-rg",
            "subscription_id": "6aa4adf4-4021-4201-9071-7c5d6502ee03"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/6aa4adf4-4021-4201-9071-7c5d6502ee03/resourceGroups/devops-rg/providers/Microsoft.Network/networkSecurityGroups/devops-nsg/securityRules/allow-ssh",
            "name": "allow-ssh",
            "network_security_group_name": "devops-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "devops-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "allow-ssh",
            "network_security_group_name": "devops-nsg",
            "resource_group_name": "devops-rg",
            "subscription_id": "6aa4adf4-4021-4201-9071-7c5d6502ee03"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/6aa4adf4-4021-4201-9071-7c5d6502ee03/resourceGroups/devops-rg/providers/Microsoft.Network/publicIPAddresses/devops-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.41.218.35",
            "ip_version": "IPv4",
            "location": "southindia",
            "name": "devops-pip",
            "resource_group_name": "devops-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "devops-pip",
            "resource_group_name": "devops-rg",
            "subscription_id": "6aa4adf4-4021-4201-9071-7c5d6502ee03"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/6aa4adf4-4021-4201-9071-7c5d6502ee03/resourceGroups/devops-rg/providers/Microsoft.Network/virtualNetworks/devops-vnet/subnets/devops-subnet",
            "name": "devops-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "devops-rg",
            "virtual_network_name": "devops-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "devops-subnet",
            "resource_group_name": "devops-rg",
            "subscription_id": "6aa4adf4-4021-4201-9071-7c5d6502ee03",
            "virtual_network_name": "devops-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "3bf8b1e0-0364-4acf-bb3f-a9f687043b23",
            "id": "/subscriptions/6aa4adf4-4021-4201-9071-7c5d6502ee03/resourceGroups/devops-rg/providers/Microsoft.Network/virtualNetworks/devops-vnet",
            "location": "southindia",
            "name": "devops-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "devops-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/6aa4adf4-4021-4201-9071-7c5d6502ee03/resourceGroups/devops-rg/providers/Microsoft.Network/virtualNetworks/devops-vnet/subnets/devops-subnet",
                "name": "devops-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "devops-vnet",
            "resource_group_name": "devops-rg",
            "subscription_id": "6aa4adf4-4021-4201-9071-7c5d6502ee03"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}